# talent-talks-automation

./: .env.example  .gitignore  CHANGELOG.md  MANUAL_TEST_STEPS.md  README.md  TTS_CDP_TESTING.md  behave.ini  check_email_body.py  check_email_details.py  create_quick_interview.py  create_test_interview.py  get_interview_link.py  get_link.py  index.html  list_models.py  pretty.output  pyproject.toml  simple_test.py  test_email_connection.py  test_email_fetch.py  test_email_not_found.py  test_gemini_tts.py  test_interview_response.py  test_tts.py  test_tts_cdp.py
.github/: copilot-instructions.md
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  test_data.json  test_data.xlsx  timeline.json
docs/: automation_test_plan.md  configuration.md  dashboard_test_scenarios.md  e2e_interview_flow.md  testing_limitations.md
export/: influxDbData.txt  prometheusData.txt
features/: create_job_opening.feature  email.feature  environment.py  login.feature  test_email_only.feature  test_tts_cdp.feature
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
pages/: create_job_opening_page.py  dashboard_page.py  interview_page.py  login_page.py  schedule_interview_page.py  view_interviews_page.py  view_job_openings_page.py
utils/: config_loader.py  data_loader.py  logger.py  mail_client.py  tts_generator.py
widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
(+178 files in other folders)
