[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talent-talks-automation"
version = "0.1.0"
description = "BDD UI automation framework with Behave, Playwright, and Allure reporting"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "behave>=1.2.7",
    "playwright>=1.40",
    "allure-behave>=2.13",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "google-genai>=1.56.0",
    "gTTS>=2.3.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.3",
    "isort>=5.13",
    "mypy>=1.10"
]
[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "pages*", "utils*", "features*"]
exclude = ["__pycache__*", "*.pyc"]